# university-practice

./: README.md
4-formal-languages-practice/: Makefile  README.md
4-system-programming-practice/: README.md
4-system-programming-practice/src/: ServerConfig.h  client.cpp  server.cpp
5-parallel-practice/task_1/: Makefile  main.cpp  (+5 more)
6-opengl-practice/: CMakeLists.txt  README.md
6-opengl-practice/assets/map/: maze.txt  room_A.txt  room_B.txt  room_C.txt  room_in.txt  room_out.txt
6-opengl-practice/src/: Animator.cpp  Animator.hpp  BaseObject.cpp  BaseObject.hpp  BaseSpriteOrderer.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  ControlledObject.cpp  ControlledObject.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  Label.cpp  Label.hpp  LoosingDoor.cpp  LoosingDoor.hpp  MathUtils.cpp  MazeLoader.cpp  OpenGL.cpp  OpenGL.hpp  OpenglUtils.cpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp  SpriteOrderer.cpp  SpriteOrderer.hpp  Texture.cpp  Texture.hpp  Tile.cpp  Tile.hpp  UiElement.cpp  UiElement.hpp  Window.cpp  Window.hpp  (+6 more)
6-ray-traycing-practice/: Makefile  README.md
7-cuda-practice/: README.md
7-quantum-practice/: README.md
7-rabbitmq-practice-1/: package-lock.json  package.json
7-rabbitmq-practice-2/: package.json  tslint.json
7-rabbitmq-practice-3/: .gitignore  config.json  package-lock.json  package.json  tsconfig.json
8-graph-generator/: Makefile  README.md
graduate-work/: .env.example  README.md  config.json  requirements.txt
other-graph-generation-algorithms/: README.md  chung_lu.cpp  lcd.cpp
(+259 files in other folders)
